<resources>
	<string name="server_and_port">http://192.168.43.127:8000/</string>
	<string name="server_user_data">users/</string>
	<string name="server_house_data">houses/</string>

	<string name="default_font_path">fonts/kalpurush.ttf</string>

	<string name="empty_string"></string>
	<string name="welcome_toast">স্বাগতম!</string>
	<string name="login_failed_toast">"ভুল ইমেইল বা পাসওয়ার্ড। অনুগ্রহ করে আবার চেষ্টা করুন।"</string>
	<string name="connection_failure_toast">নেট কানেকশনে কোনো সমস্যা হয়েছে</string>
	<string name="registration_successful_toast">আপনার রেজিস্ট্রেশন সম্পন্ন হয়েছে</string>
	<string name="not_filled_field_toast">দয়া করে সবগুলো ঘর পূর্ণ করুন!</string>
	<string name="add_house_successful_toast">আপনার বাসাটি আমাদের তালিকায় যুক্ত হয়েছে</string>

	<string name="app_name">Barivara</string>
	<string name="bariwala">বাড়িওয়ালা</string>
	<string name="varatiya">ভাড়াটিয়া</string>

	<string name="title_activity_login">Sign in</string>
	<string name="prompt_email_old">Email</string>
	<string name="prompt_password_old">Password</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="welcome">"Welcome !"</string>
	<string name="invalid_username">Not a valid username</string>
	<string name="invalid_password">Password must be >5 characters</string>
	<string name="login_failed">"Login failed"</string>

	<string name="prompt_name">নাম</string>
	<string name="prompt_email">ইমেইল</string>
	<string name="prompt_password">পাসওয়ার্ড</string>
	<string name="login_button">লগইন</string>
	<string name="logout_button">লগ আউট</string>
	<string name="registration_button">রেজিস্টার</string>
	<string name="registration_title">রেজিস্ট্রেশন</string>
	<string name="othoba">অথবা</string>

	<string name="app_close_toast">আরেকবার চাপলেই বন্ধ হয়ে যাবে!</string>

	<string name="vara">ভাড়া</string>

	<string name="button_ok">ঠিক আছে</string>
	<string name="button_next_page">পরবর্তী পৃষ্ঠা</string>
	<string name="bistarito">বিস্তারিত</string>

	<string name="amarBashagulo_Bariwala">আমার বাসাগুলো</string>
	<string name="notunBashaJog">নতুন বাসা যোগ</string>

	<string name="notunBashaVara">নতুন বাসা ভাড়া</string>
	<string name="amarBashagulo_Varatiya">আমার বাসাগুলো</string>

	<string name="houseInfo">বাসা সম্পর্কিত তথ্য</string>
	<string name="typeOfHouse">বাসার ধরন</string>
	<string name="familyHouse">ফ্যামিলি বাসা</string>
	<string name="Mess">মেস</string>
	<string name="amountOfRent">ভাড়ার পরিমাণ (টাকায়)</string>
	<string name="numberOfBedrooms">শোবার ঘরের সংখ্যা</string>
	<string name="doesExist">আছে</string>
	<string name="numberOfAttachedBaths">এ্যাটাচড বাথরুমের সংখ্যা</string>
	<string name="numberOfOtherBaths">অন্যান্য বাথরুমের সংখ্যা</string>
	<string name="numberOfBaths">বাথরুমের সংখ্যা</string>
	<string name="diningRoom">খাবার ঘর</string>
	<string name="cookingRoom">রান্নাঘর</string>
	<string name="title_activity_maps">Map</string>

	<string name="jela">জেলা</string>
	<string name="upazila">উপজেলা/সিটি কর্পোরেশন</string>
	<string name="elaka">এলাকা</string>
	<string name="basharThikana">বাসার ঠিকানা</string>

	<string name="place_search_hint">জায়গার নাম</string>

	<string name="toggle_button_family_basha">ফ্যামিলি বাসা</string>
	<string name="toggle_button_mess">মেস</string>
</resources>