<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/defaultBackground"
	tools:context=".LandlordHouseAttributes">

	<TextView
		android:id="@+id/textView6"
		android:layout_width="107dp"
		android:layout_height="52dp"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:gravity="center"
		android:text="@string/houseInfo"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TableLayout
		android:id="@+id/tableLayout"
		android:layout_width="378dp"
		android:layout_height="486dp"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView6">

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textView7"
				android:layout_width="161dp"
				android:layout_height="match_parent"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/bedrooms" />

			<EditText
				android:id="@+id/editText4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="10"
				android:inputType="number" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textView9"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:text="@string/numberOfAttachedBaths" />

			<EditText
				android:id="@+id/editText6"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="10"
				android:inputType="number" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textView10"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/numberOfOtherBaths" />

			<EditText
				android:id="@+id/editText7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="10"
				android:inputType="number" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textView11"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:text="@string/diningRoom" />

			<CheckBox
				android:id="@+id/checkBox3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/doesExist" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textView13"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:text="@string/cookingRoom" />

			<CheckBox
				android:id="@+id/checkBox4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/doesExist" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent" />

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		</TableRow>

	</TableLayout>

	<Button
		android:id="@+id/button5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="16dp"
		android:text="@string/button_next_page"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>