<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/defaultBackground"
	tools:context=".renter.FindAHouse">

	<AutoCompleteTextView
		android:id="@+id/autoCompleteTextView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:hint="@string/place_search_hint"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.497"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TableLayout
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView">

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent" >

			<TextView
				android:id="@+id/textView10"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_next_page"
				android:textSize="18sp" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent" >

			<TextView
				android:id="@+id/textView14"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/diningRoom"
				android:textSize="18sp"
				app:fontFamily="@font/hind_siliguri_light" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent" >

			<TextView
				android:id="@+id/textView17"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="18sp" />
		</TableRow>

	</TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>